# Project_Red_Queen

./: .gitignore  README.md  backend_architecture.md  custom_console.py  frontend_architecture.md  generate_architecture.py
architecture/: architecture_summary.md  fullstack_architecture.md  generate_architecture.py
b-e/: .vercelignore  COMMANDS.md  api_usage.json  calculate_knowledge_size.py  google_llm_init.py  main.py  pyproject.toml  railway.toml  system_prompt.txt  test_tts.py  vercel.json
b-e/ai/: api_usage.json  check_voices.py  test_actual_api.py  test_chat_mp3.py  test_tts.py  tts_module.py  urls.py  utils.py  views.py
b-e/chroma/: README.md  chroma.py  custom_console.py  last_content.txt  last_hash.txt  last_update.txt  red_queen_history.txt  web_scraper.py
b-e/chroma/red_queen_knowledge/: batch_fetch.py
b-e/chroma/red_queen_knowledge/franchise/: __init__.py  last_franchise_content.json  last_franchise_update.txt  scraper.py
b-e/chroma/red_queen_knowledge/game_content/: __init__.py  scraper.py
b-e/chroma/red_queen_knowledge/lore/: scraper.py
b-e/chroma/red_queen_knowledge/smaller_topics/: __init__.py  scraper.py
b-e/chroma/red_queen_knowledge/urls/: urls.json
b-e/config/: settings.py  urls.py
f-e/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.ts  vitest.config.ts
f-e/__tests__/: chat.test.tsx  disclaimer.test.tsx  page.test.tsx
f-e/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
f-e/app/chat/: page.tsx
f-e/app/components/: BackButton.tsx  Footer.tsx  (+3 more)
f-e/components/: RedQueenAvatar.tsx
(+6 files in other folders)
