[project]
name = "b-e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.9",
    "django-cors-headers>=4.9.0",
    "google-generativeai",
    "llama-index",
    "python-dotenv>=1.2.1",
    "chromadb",
    "beautifulsoup4",
]
