[project]
name = "b-e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.9",
    "django-cors-headers>=4.9.0",
    "google-generativeai",
    "llama-index",
    "llama-index-core==0.12.52.post1",
    "llama-index-embeddings-google-genai==0.2.1",
    "llama-index-llms-google-genai",
    "llama-index-readers-file",
    "llama-index-readers-llama-parse",
    "llama-index-workflows==1.3.0",
    "llama-parse",
    "python-dotenv>=1.2.1",
    "chromadb",
    "beautifulsoup4",
    "edge-tts",
]
